# graph_demo

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  media_crawl_model.py
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/apps/coze/: __init__.py  api.py  apps.py  schemas.py  services.py
backend/apps/crawl/: __init__.py  admin.py  api.py  apps.py  enums.py  models.py  schemas.py  tasks.py
backend/apps/crawl/migrations/: 0001_initial.py  0002_add_unique_cont_id.py  0003_crawltask_media_crawl_enabled_and_more.py
backend/apps/graph/: __init__.py  admin.py  api.py  apps.py  models.py  schemas.py
backend/apps/media_crawl/: __init__.py  admin.py  apps.py  db_router.py  tasks.py
backend/apps/media_crawl/api/: __init__.py  base.py  bilibili.py  douyin.py  kuaishou.py  report.py  tieba.py  weibo.py  xhs.py  zhihu.py
backend/apps/media_crawl/migrations/: 0001_initial.py  0002_analysisreport.py
backend/apps/media_crawl/models/: __init__.py  base.py  bilibili.py  douyin.py  kuaishou.py  report.py  (+4 more)
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py
backend/core/: exceptions.py
backend/crawler/: __init__.py  base.py
backend/crawler/thepaper/: __init__.py  article.py  config.py  news_list.py
backend/crawler/utils/: __init__.py  http_client.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/services/: crawl_service.py  media_crawl_integration.py  media_neo4j_sync.py  neo4j_client.py  neo4j_sync.py
(+163 files in other folders)
